fixed hamburger spacing issue

--- a/scss/parts/_betaBanner.scss
+++ b/scss/parts/_betaBanner.scss
@@ -27,4 +27,8 @@
   .dev-mode-nav2 {
   padding-top: 40px;
   }
+
+  .dev-mode-nav3 {
+    top: 90px;
+  }
 }
